--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chad Kostohryz Portfolio</title>
 </head>
 <body>
+<header>
+  <nav>
 
+  </nav>
+</header>
+
+<footer>
+
+</footer>
 </body>
 </html>
