Added code to html

--- a/index.html
+++ b/index.html
@@ -7,13 +7,31 @@
 </head>
 <body>
 <header>
+  <h1>Chad Kostohryz</h1>
+  <h3>Greatness Awaits</h3>
   <nav>
-
+    <ul>
+      <li>About Me</li>
+      <li>My Work</li>
+      <li>Contact Me</li>
+    </ul>
   </nav>
 </header>
-
+<article>
+  <h2>About Me</h2>
+  <p>I started computer programming because of cryptocurrency. Then that lead to networking. I have enjoyed SQL and IT. When I’m not trying to learn new ways of computer programming, I enjoy hiking with my wife of 14 years. I love all things outdoors. Camping tops that list. I have two children of my own and adopted two; they are all boys, ages 6, 8, 12, and 14. </p>
+</article>
 <footer>
-
+  <nav>
+    <ul>
+      <li>ckostohryz7@gmail.com</li>
+      <li>16516055199</li>
+      <li>Spotify</li>
+      <li>Linkedin</li>
+      <li>Github</li>
+    </ul>
+  </nav>
+  <h4>Thank you for viewing my portfolio</h4>
 </footer>
 </body>
 </html>
