Added the header code for html

--- a/index.html
+++ b/index.html
@@ -6,20 +6,27 @@
   <title>Chad Kostohryz Portfolio</title>
 </head>
 <body>
-<header>
-  <h1>Chad Kostohryz</h1>
-  <h3>Greatness Awaits</h3>
-  <nav>
-    <ul>
-      <li>About Me</li>
-      <li>My Work</li>
-      <li>Contact Me</li>
-    </ul>
-  </nav>
-</header>
+  <div class="great">
+    <header class="header1">
+      <img src="" alt="">
+
+      <h1>Chad Kostohryz</h1>
+      <nav>
+        <ul class="internal">
+          <li><a href="About">About Me</a></li>
+          <li><a href="Work">Work</a></li>
+          <li><a href="contact">Contact Me</a></li>
+          <li><a href="resume">Resume</a></li>
+        </ul>
+      </nav>
+    </header>
+  </div>
+    <header class="header2">
+      <p>Greatness Awaits</p>
+    </header>
 <article>
   <h2>About Me</h2>
-  <p>I started computer programming because of cryptocurrency. Then that lead to networking. I have enjoyed SQL and IT. When I’m not trying to learn new ways of computer programming, I enjoy hiking with my wife of 14 years. I love all things outdoors. Camping tops that list. I have two children of my own and adopted two; they are all boys, ages 6, 8, 12, and 14. </p>
+  <p>I started computer programming because of cryptocurrency. Then that lead to networking. I have enjoyed SQL and IT. When I’m not trying to learn new ways of computer programming, I enjoy hiking with my wife of 14 years. I love all things outdoors. Camping tops that list. I have two children of my own and adopted two; they are all boys, ages 6, 8, 12, and 14. I also enjoy cooking so much so that I started a podcast with friends. </p>
 </article>
 <footer>
   <nav>
@@ -31,7 +38,7 @@
       <li>Github</li>
     </ul>
   </nav>
-  <h4>Thank you for viewing my portfolio</h4>
+  <h4>Made with &#128150; by Chad Kostohryz</h4>
 </footer>
 </body>
 </html>
