--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chad Kostohryz Portfolio</title>
+  <link rel="stylesheet" href="./assests/reset.css">
+  <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
   <div class="great">
     <header class="header1">
-      <img src="" alt="">
+      <img class="Chad" src="" alt="">
 
       <h1>Chad Kostohryz</h1>
       <nav>
