added photos to redme and added comments to css html

--- a/index.html
+++ b/index.html
@@ -10,18 +10,16 @@
 </head>
 
 <body>
-  <!--Developer name, recent photo, link selectio about them, their work, and how to contact-->
-  <!--When click link in navigation the ui scrolls to corasponding selection-->
-  <!--i click on link to section about work and ui scrolls to selection with titled image of developers first application that image is larger in size then others-->
-  <!--click on image and am taken to deployed application-->
-  <!--Resize page for multiply screens-->
+<!--Developer name, recent photo, link selection about me, work, and how to contact-->
+<!--Click on link to section about work and ui scrolls to selection with titled image of developers first application that image is larger in size then others-->
+<!--click on image and am taken to deployed application-->
 <div class="big">
-  <!--a recent image of me-->
+<!--a recent image of me-->
   <header class="header1">
     <img class="Chad" src="./assets/photo/20211113_101722.jpg" alt="Chad image" />
 
     <h1>Chad Kostohryz</h1>
-   <!--To navigate between articles-->
+<!--To navigate between articles-->
     <nav>
       <ul class="titles">
         <li><a href="#about">About Me</a></li>
@@ -30,7 +28,7 @@
       </ul>
     </nav>
   </header>
-  <!--second header to add saying-->
+<!--second header to add saying-->
   <header class="header2">
     <p>I'm learning how to code.</p>
   </header>
@@ -41,19 +39,19 @@
       <div class="me"> I started coding by learning to set up networks with a raspberry pi, which led to cryptocurrency mining equipment. I liked it so much that I decided to go to school for such coding endeavors. I went full-time at Rasmussen college then started Bootcamp to move it along faster with the drive to get my computer science degree.
       </div>
     </article>
-    <!--articles of work i have done todate with images for work to come-->
+<!--Add context to what I want to show-->
     <article id="work" class="jobs">
       <h2 class="job">Work</h2>
       <div class="projects">
-        <!--able to click on images to take me to the-->
+<!--able to click on images to take me to them-->
         <div class="project">
-          <h3>A prework Study Guide</h3>
+          <h3>A Prework Study Guide</h3>
           <a href="https://ckostohr.github.io/prework-study-guide/" alt="Work">
             <img class="art" src="assets/photo/Preworkscreenshot.png" alt="prework-study-guide">
           </a>
         </div>
         <div class="project">
-          <h3>Making code Semantic</h3>
+          <h3>Making Code Semantic</h3>
           <a href="https://ckostohr.github.io/Bootcamp01/">
             <img class="art" src="assets/photo/fanny-gustafsson-cSTreRUUf6M-unsplash.jpg" alt="work2" />
           </a>
@@ -69,6 +67,8 @@
       </div>
     </article>
 <!--a way to email me if you would like to contact me-->
+<!--add in git hub-->
+<!--I wanted to add my linkedin for Resume-->
     </article>
     <article id="contact" class="email">
       <h2 class="email">Contact me</h2>
@@ -77,7 +77,7 @@
       <a href="https://www.linkedin.com/in/chad-kostohryz-884861235">LinkedIn</a>
     </article>
   </section>
+<!--Add in an emoji for flare-->
   <footer>Thank you for viewing&#128513;  </footer>
 </body>
-
 </html>
