added url for project

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
         <div class="project">
           <h3>Project coming soon</h3>
-          <a href=""><img class="art" src="assets/photo/steve-johnson-TVnYsnUy0G8-unsplash.jpg" alt="work3" /></a>
+          <a href="https://github.com/CKostohr/Portfolio.git"><img class="art" src="assets/photo/steve-johnson-TVnYsnUy0G8-unsplash.jpg" alt="work3" /></a>
         </div>
         <div class="project">
           <h3>Project coming soon</h3>
