--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
           </a>
         </div>
         <div class="project">
-          <h3>Project coming soon</h3>
-          <a href="https://github.com/CKostohr/Portfolio.git"><img class="art" src="assets/photo/steve-johnson-TVnYsnUy0G8-unsplash.jpg" alt="work3" /></a>
+          <h3>Camping API</h3>
+          <a href="https://davidmah11.github.io/BootCamp-Project-1/"><img class="art" src="assets/photo/steve-johnson-TVnYsnUy0G8-unsplash.jpg" alt="work3" /></a>
         </div>
         <div class="project">
           <h3>Project coming soon</h3>
