Added class project to port.

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
           <a href="https://davidmah11.github.io/BootCamp-Project-1/"><img class="art" src="assets/photo/steve-johnson-TVnYsnUy0G8-unsplash.jpg" alt="work3" /></a>
         </div>
         <div class="project">
-          <h3>Project coming soon</h3>
-          <a href=""><img class="art" src="assets/photo/altumcode-g7UfI6Xsi7o-unsplash.jpg" alt="work4" /></a>
+          <h3>Cook Feast Repeat Cooking Site</h3>
+          <a href="https://cook-feast-repeat.herokuapp.com/"><img class="art" src="assets/photo/altumcode-g7UfI6Xsi7o-unsplash.jpg" alt="Cook Feast Repeat" /></a>
         </div>
       </div>
     </article>
